# fastapi_websocket_rpc

./: README.md  pyproject.toml  setup.py
examples/: bidirectional_client_example.py  bidirectional_server_example.py  simple_client_example.py  simple_server_example.py  websocket_client_example.py  websocket_server_example.py
fastapi_websocket_rpc/: rpc_channel.py  simplewebsocket.py
fastapi_ws_rpc/: __init__.py  rpc_channel.py  simplewebsocket.py  utils.py
scripts/: publish.sh
tests/: advanced_rpc_test.py  basic_rpc_test.py  binary_rpc_test.py  custom_methods_test.py  fast_api_depends_test.py  trigger_flow_test.py
