[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi_ws_rpc"
version = "0.1.0"
description = "A fast and durable bidirectional JSON RPC channel over Websockets and FastApi."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Or Weis", email = "or@permit.io" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI"
]
dependencies = [
  "fastapi>=0.78.0,<1",
  "packaging>=20.4",
  "pydantic>=1.9.1",
  "uvicorn>=0.17.6,<1",
  "websockets>=10.3,<11",
  "tenacity>=8.0.1,<9",
]
requires-python = ">=3.7"
urls = { "Homepage" = "https://github.com/permitio/fastapi_websocket_rpc" }
